adding comment to code

--- a/owaji-inyagham.html
+++ b/owaji-inyagham.html
@@ -9,6 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <!-- Contact information -->
     <div>
         <h1>Owaji-inyagham Ogbuluijah</h1>
         <div>
@@ -21,6 +22,7 @@
         <p><a href="#">iromata92@gmail.com</a></p>
     </div><hr>
 
+    <!-- Personal skill set -->
     <div background="Whatsapp+Background.jpg">
         <h2>Skills</h2>
         <ol>
@@ -30,6 +32,7 @@
         </ol>
     </div><hr>
 
+    <!-- My work experience -->
     <div>
         <h2>Experience</h2>
         <div>
@@ -59,6 +62,8 @@
             </ul>
         </div>
     </div><hr>
+
+    <!-- My education stage -->
     <div>
         <h2>Education</h2>
         <small><p>MONTH 2013 - MONTH 2016</p></small>
