--- a/owaji-inyagham.html
+++ b/owaji-inyagham.html
@@ -5,72 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="owaji-inyagham.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    <!-- Contact information -->
-    <div>
-        <h1>Owaji-inyagham Ogbuluijah</h1>
-        <div>
-            <img src="https://res.cloudinary.com/yagmus/image/upload/v1566519244/felix_mndbjf.jpg" width="250px" height="250px" alt="Owaji-inyagham Ogbuluijah">
+    <div class="main-div">
+        <div class="divide">
+            <!-- Contact information -->
+            <div class="page-divider1 coloring">
+                <div>
+                    <img src="https://res.cloudinary.com/yagmus/image/upload/v1566519244/felix_mndbjf.jpg" min-height="185px" width="185px" alt="Owaji-inyagham">
+                </div>
+                <div>
+                    <h3>Contacts Address</h3>
+                    <p>Plot 762 Aminu Kanu Crescent</p> 
+                    <p>Wuse 2, Nigeria</p>
+                    <p>+2349056138337</p>
+                    <p><a href="#">iromata92@gmail.com</a></p>
+                </div>
+                <div class="social">
+                    <h3>Social Media</h3>
+                    <ul>
+                        <li><a href="https://twitter.com/Owajiyagham">Twitter</a></li>
+                        <li><a href="https://github.com/Ogbus">Github</a></li>
+                        <li><a href="https://facebook.com/ogbuluijah.felix1">Facebook</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="page-divider2">
+                <div id="div-h1">
+                    <h1>Owaji-inyagham Ogbuluijah</h1>
+                </div>
+                <!-- Skills information -->
+                <div class="skills">
+                    <h2>Skills</h2>
+                    <ol>
+                        <li>Ability to unlearn previous knowledge. Knowing how and when to show empathy</li>
+                        <li>Ability to communicate to everyone's understanding. Good judgement of character</li>
+                        <li>Good negotiation skills and ability to persuade others.</li>
+                        <li>Ability to read and write HTML and CSS efficiently.</li>
+                    </ol>
+                </div><hr>
+                <div>
+                    <!-- Experience information -->
+                    <h2>Experience</h2>
+                    <div class="horizontal">
+                        <small><p>MONTH 2018 - PRESENT</p></small>
+                        <h4>Ujii Technologies Limited, Abuja - <em>Co-founder</em></h4>
+                        <ul>
+                            <li>Conducted and managed company products.</li>
+                            <li>Handling daily company operations.</li>
+                            <li>Designed effective company's marketing/advertising strategies.</li>
+                        </ul>
+                    </div>
+                    <div class="horizontal">
+                        <small><p>MONTH 2017 - MONTH 2018</p></small>
+                        <h4>WorkSpace for Innovation, Abuja - <em>Marketing/IT Personnel</em></h4>
+                        <ul>
+                            <li>Improved company online presence.</li>
+                            <li>Conducted marketing surveys.</li>
+                        </ul>
+                    </div>
+                    <div class="horizontal">
+                        <small><p>MONTH 2011 - MONTH 2013</p></small>
+                        <h4>Cristina Household Shop, Port Harcourt - <em>Cashier/Shop Attendant</em></h4>
+                        <ul>
+                            <li>Kept company cash records.</li>
+                            <li>Improved returning customer's rate by 20%.</li>
+                            <li>Supervised company sales promo.</li>
+                        </ul>
+                    </div>
+                </div><hr>
+                <div>
+                    <!-- Education informtion -->
+                    <h2>Education</h2>
+                    <small><p>MONTH 2013 - MONTH 2016</p></small>
+                    <h4>University of Cebu, METC, Philippines - <em>B.Sc</em></h4>
+                    <ul>
+                        <li>Marine Engineering</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <h2>Contact Address</h2>
-        <p>Plot 762 Aminu Kanu Crescent</p> 
-        <p>Wuse 2, Nigeria</p>
-        <p>+2349056138337</p>
-        <p><a href="#">iromata92@gmail.com</a></p>
-    </div><hr>
-
-    <!-- Personal skill set -->
-    <div background="Whatsapp+Background.jpg">
-        <h2>Skills</h2>
-        <ol>
-            <li>Ability to unlearn previous knowledge. Knowing how and when to show empathy</li>
-            <li>Ability to communicate to everyone's understanding. Good judgement of character</li>
-            <li>Good negotiation skills and ability to persuade others.</li>
-        </ol>
-    </div><hr>
-
-    <!-- My work experience -->
-    <div>
-        <h2>Experience</h2>
-        <div>
-            <small><p>MONTH 2018 - PRESENT</p></small>
-            <h4>Ujii Technologies Limited, Abuja - <em>Co-founder</em></h4>
-            <ul>
-                <li>Conducted and managed company products.</li>
-                <li>Handling daily company operations.</li>
-                <li>Designed effective company's marketing/advertising strategies.</li>
-            </ul>
-        </div>
-        <div>
-            <small><p>MONTH 2017 - MONTH 2018</p></small>
-            <h4>WorkSpace for Innovation, Abuja - <em>Marketing/IT Personnel</em></h4>
-            <ul>
-                <li>Improved company online presence.</li>
-                <li>Conducted marketing surveys.</li>
-            </ul>
-        </div>
-        <div>
-            <small><p>MONTH 2011 - MONTH 2013</p></small>
-            <h4>Cristina Household Shop, Port Harcourt - <em>Cashier/Shop Attendant</em></h4>
-            <ul>
-                <li>Kept company cash records.</li>
-                <li>Improved returning customer's rate by 20%.</li>
-                <li>Supervised company sales promo.</li>
-            </ul>
-        </div>
-    </div><hr>
-
-    <!-- My education stage -->
-    <div>
-        <h2>Education</h2>
-        <small><p>MONTH 2013 - MONTH 2016</p></small>
-        <h4>University of Cebu, METC, Philippines - <em>B.Sc</em></h4>
-        <ul>
-            <li>Marine Engineering</li>
-        </ul>
     </div>
 </body>
 </html>
