--- a/example.html
+++ b/example.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- responding to the true conditioner of form element -->
     <div>
         <h2>Submitted Successfully</h2>
     </div>
